feat: docker compose 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,19 +4,25 @@ spring:
     activate:
       on-profile: local
     import: optional:file:.env.local[.properties]
+  jpa:
+    hibernate:
+      ddl-auto: update
 
 ---
 spring:
   config:
     activate:
       on-profile: dev
-    import: optional:file:.env[.properties]
+    import: optional:file:.env.dev[.properties]
+  jpa:
+    hibernate:
+      ddl-auto: update # 추후 수정
 ---
 
-# default
+# default 공통 설정
 spring:
   profiles:
-    active: local # default profile 을 local 로 설정
+    active: local # default 프로파일 : local
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${DB_URL}
@@ -25,8 +31,6 @@ spring:
   jpa:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL8Dialect
-    hibernate:
-      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
@@ -48,6 +52,7 @@ springdoc:
     - /**
   cache:
     disabled: true
+
 
 
 
