fix: workflow 수정

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -45,7 +45,7 @@ jobs:
           
           aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin 533267191976.dkr.ecr.ap-northeast-2.amazonaws.com
           
-          docker compose -f docker-compose-dev.yml build
+          docker build -t reddi-server .
           
           docker tag reddi-server:latest 533267191976.dkr.ecr.ap-northeast-2.amazonaws.com/reddi-server:latest
           
