--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.0.5'
 
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
     // Swagger 3.0.0
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 }
