--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,9 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
-    // Swagger 3.0.0
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
