feat: notion api 연동 - 브랜드 id 로 브랜드 조회

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,6 +65,10 @@ springdoc:
   cache:
     disabled: true
 
-
+notion:
+  api:
+    key: ${NOTION_API_KEY}
+  brandDB:
+    id: ${NOTION_BRAND_DB_ID}
 
 
