--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -4,7 +4,6 @@ services:
   web:
     platform: linux/amd64
     container_name: spring-reddi-server
-    image: reddi-server
     build:
       context: .
       dockerfile: Dockerfile
@@ -14,5 +13,8 @@ services:
       - SPRING_PROFILES_ACTIVE=dev
     env_file:
       - .env.dev
-    volumes:
-      - ./:/app
+  redis:
+    image: "redis:latest"
+    container_name: redis
+    ports:
+      - "6379:6379"
