--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     import: optional:file:.env.local[.properties]
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
 
 ---
 spring:
