--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     import: optional:file:.env.dev[.properties]
   jpa:
     hibernate:
-      ddl-auto: create # 추후 수정
+      ddl-auto: update # 추후 수정
 ---
 
 # default 공통 설정
