feat: 브랜드, 마케팅 API 페이지네이션 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,6 +46,7 @@ spring:
           google:
             client-id: ${CLIENT_ID}
             client-secret: ${CLIENT_SECRET}
+#            redirectUri: https://reddi-client.vercel.app/callback
             scope: profile, email
   data:
     redis:
