--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,13 +2,13 @@ version: "3.7"
 
 services:
   web:
-    platform: linux/amd64
+#    platform: linux/amd64
     container_name: spring-reddi-server
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "8081:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=dev
     env_file:
@@ -17,4 +17,4 @@ services:
     image: "redis:latest"
     container_name: redis
     ports:
-      - "6379:6379"
+      - "6380:6379"
