--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,15 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${CLIENT_ID}
+            client-secret: ${CLIENT_SECRET}
+#            redirectUri: http://localhost:8080/login/oauth2/code/google
+            scope: profile, email
 
 ---
 spring:
@@ -17,6 +26,15 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update # 추후 수정
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${CLIENT_ID}
+            client-secret: ${CLIENT_SECRET}
+#            redirectUri: http://localhost:8081/login/oauth2/code/google
+            scope: profile, email
 ---
 
 # default 공통 설정
@@ -39,15 +57,6 @@ spring:
         format_sql: true
   jwt:
     secret: ${JWT_SECRET}
-  security:
-    oauth2:
-      client:
-        registration:
-          google:
-            client-id: ${CLIENT_ID}
-            client-secret: ${CLIENT_SECRET}
-#            redirectUri: https://reddi-client.vercel.app/callback
-            scope: profile, email
   data:
     redis:
       host: ${REDIS_HOST}
@@ -74,4 +83,4 @@ notion:
   marketingDB:
     id: ${NOTION_MARKETING_DB_ID}
 
-
+front-redirection-url : ${FRONT_REDIRECTION_URL}
