--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
           google:
             client-id: ${CLIENT_ID}
             client-secret: ${CLIENT_SECRET}
-#            redirectUri: http://localhost:8080/login/oauth2/code/google
+            redirectUri: http://localhost:8080/login/oauth2/code/google
             scope: profile, email
 front-redirection-url: ${FRONT_LOCAL_REDIRECTION_URL}
 
@@ -34,7 +34,7 @@ spring:
           google:
             client-id: ${CLIENT_ID}
             client-secret: ${CLIENT_SECRET}
-#            redirectUri: http://localhost:8081/login/oauth2/code/google (서버 포트)
+            redirectUri: ${SERVER_PROD_API_URL}/login/oauth2/code/google
             scope: profile, email
 front-redirection-url: ${FRONT_PROD_REDIRECTION_URL}
 ---
