--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,19 +2,20 @@ version: "3.7"
 
 services:
   web:
-#    platform: linux/amd64
-    container_name: spring-reddi-server
+    platform: linux/amd64
+    container_name: spring-reddi-server-dev
+    image: 533267191976.dkr.ecr.ap-northeast-2.amazonaws.com/reddi-server-dev:latest
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8081:8080"
+      - "8081:8081"
     environment:
       - SPRING_PROFILES_ACTIVE=dev
     env_file:
       - .env.dev
   redis:
     image: "redis:latest"
-    container_name: redis
+    container_name: redis-dev
     ports:
-      - "6380:6379"
+      - "6380:6380"
