--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,24 @@ spring:
           google:
             client-id: ${CLIENT_ID}
             client-secret: ${CLIENT_SECRET}
+            redirectUri: ${GOOGLE_REDIRECT_URL_LOCAL}
+            scope: profile, email
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
+    import: optional:file:.env.prod[.properties]
+  jpa:
+    hibernate:
+      ddl-auto: update # 추후 수정
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${CLIENT_ID}
+            client-secret: ${CLIENT_SECRET}
             redirectUri: ${GOOGLE_REDIRECT_URL_PROD}
             scope: profile, email
 ---
