--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -73,6 +73,7 @@ spring:
         database-platform: org.hibernate.dialect.MySQL8Dialect
         show_sql: true
         format_sql: true
+        default_batch_fetch_size: 1000
   jwt:
     secret: ${JWT_SECRET}
   data:
